Completed basic API functionality

--- a/Projects/Project1/Project1App/Project1.App/Project1.App.csproj
+++ b/Projects/Project1/Project1App/Project1.App/Project1.App.csproj
@@ -1,16 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Project1.Data\Project1.Data.csproj" />
-    <ProjectReference Include="..\Project1.Models\Project1.Models.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Project1Web\Project1.Models\Project1.Models.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
