Fixed appsetting problem

--- a/Projects/Project1/Project1Web/Project1.API/Project1.API.csproj
+++ b/Projects/Project1/Project1Web/Project1.API/Project1.API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>cdf16eff-8bfb-48d6-b1be-4d69422cd25e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
